fix nav logo overflow, positioning of elements

--- a/ngVioletMarketplaceMaterial/src/app/components/nav/nav.component.scss
+++ b/ngVioletMarketplaceMaterial/src/app/components/nav/nav.component.scss
@@ -3,6 +3,7 @@
 }
 
 mat-toolbar {
+  overflow-x: hidden;
   min-height: 4em;
   min-width: 100vw;
   display: flex;
@@ -37,9 +38,11 @@ mat-toolbar {
 
 .vm-logo {
   height: 100%;
-  width: 100%;
-  transform: scale(1.25) scaleY(1.5);
-  margin: 4em 0 0;
+  width: auto;
+  scale: 1.5;
+  margin: 3em 0 0 2em;
+  // transform: scale(1.25) scaleY(1.5);
+  // margin: 4em 0 0;
 }
 
 .right-links {
